--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0px;
   bottom: 0px;
-  height: 600px;
+  height: 600px;  
   width:100%;
   background-repeat: no-repeat;
 }
@@ -26,10 +26,10 @@
 }
   .header-logo-sp{
   display: none;
-
+    
   }
 @media screen and (max-width: 767px){
-
+  
 .top-hero-pc{
   display: none;
 }
@@ -50,7 +50,7 @@
   display: inline-block;
   top:15px;
   left: 20px;
-  width:180px;
+  width:180px;   
 }
 
 .humMenu {
@@ -85,15 +85,15 @@
   width: 30px;
 }
 
-.header-nav-hamburger-line span:first-child{
-top:15px;
+.header-nav-hamburger-line span:first-child{ 
+top:15px; 
 }
 
 .header-nav-hamburger-line span{
-top:23px;
+top:23px; 
 }
 .header-nav-hamburger-line span:last-child{
- top:31px;
+ top:31px;    
 }
 
 
@@ -114,7 +114,7 @@ ul {
 　list-style:none;
 　　
 }
-
+ 
 ul li {
   font-weight: bold;
   position: relative;
@@ -175,7 +175,7 @@ p{
 	border-style: solid;
 	border-color: gray;
 	border-radius: 30px;
-
+	
 }
 .black:hover {
   opacity: 0.5
@@ -201,40 +201,50 @@ a{
 }
 
 .firstview{
-
+  
     padding-left: 50px;
     padding-right: 50px;
     margin-top: 100px;
     position: relative;
     width: fit-content;
-
+    
 }
 @media screen and (max-width: 767px){
   .firstview{
     margin-top: -100px;
     margin-bottom: 30px;
-    width: 100%;
+    width: 100%; 
     right:30px;
   }
 }
 
 .center-title{
+  position: relative;
   width:100%;
   color: #333333;
     font-family: 'Lato', sans-serif;
-    font-size: 38px;
     font-weight: 700;
     line-height: 54px;
     margin-bottom: 15px;
-    text-align: center;
-    padding-left: 0px;
+    text-align: left;
 
+}
+.notes{
+  color: gray;
+  padding-top: 30px;
+  
+}
+.txt{
+    font-size: 38px;
+  display: inline-block;
+    text-align: center;
+  
 }
 @media screen and (max-width: 767px){
 .center-title{
   font-size: 25px;
   line-height: 36px;
-
+  
 }
 }
 
@@ -247,7 +257,7 @@ a{
 }
 
 .bottun-white{
- display: inline-block;
+ display: inline-block; 
 
 }
 
@@ -257,14 +267,14 @@ a{
     color:white;
     width:auto;
     position: relative;
-    top: 30px;
+    top: 100px;
     background-color: orange;
     box-sizing: border-box;
     padding:30px 120px 100px;
 }
 
 
-
+  
 
 .bottun-foot{
   display:inline-block;
@@ -286,7 +296,7 @@ a{
 .bottun-foot{
   margin-left: -200px;
   margin-top: 200px;
-}
+}  
 }
 .orange{
 
